# dwarf_bench

./: CMakeLists.txt  Config.cmake.in  DWARF_bench_automated.sh  DWARF_bench_run_in_the_container.sh  Dockerfile  README.md  bench.cpp  bench.hpp  benchmarks.sh  common.h  main.cpp  register_dwarfs.cpp  register_dwarfs.hpp  scan.cl  scan.cpp  simple.cpp  vadd.cl
.github/workflows/: build-and-test.yaml  clang-format-checker.yaml  docker-build-image.yml  impage-publisher.yaml
cmake/: KernelFunctions.cmake
common/: CMakeLists.txt  common.cpp  common.hpp  dwarf.hpp  meter.cpp  meter.hpp  oclhelpers.cpp  oclhelpers.hpp  options.cpp  options.hpp  registry.cpp  registry.hpp  result.cpp  result.hpp
common/dpcpp/: CMakeLists.txt  cuckoo_hashtable.hpp  dpcpp_common.cpp  dpcpp_common.hpp  hashfunctions.cpp  hashfunctions.hpp  hashtable.hpp  omnisci_hashtable.hpp  perfect_hashtable.hpp  slab_hash.hpp
common/dpcpp/dpl_wrapper/: dpl_wrapper.hpp
constant/: CMakeLists.txt  constant.cl  constant.cpp  constant.hpp  constant_capi.cpp  constant_dpcpp.cpp  constant_dpcpp_cuda.cpp
docs/: hdk.md
example/: CMakeLists.txt  lock_add.cpp
example/bench_usage/: CMakeLists.txt  main.cpp
example/lock_add/: CMakeLists.txt
groupby/: CMakeLists.txt  groupby.cpp  groupby.hpp  groupby_cuda.cpp  groupby_global.cpp  groupby_global.hpp  groupby_local.cpp  groupby_local.hpp  perfect_groupby.cpp  perfect_groupby.hpp
hash/: CMakeLists.txt  cuckoo_hash_build.cpp  cuckoo_hash_build.hpp  hash_build.cpp  hash_build.hpp  hash_build_non_bitmask.cpp  hash_build_non_bitmask.hpp  slab_hash_build.cpp  slab_hash_build.hpp
join/: CMakeLists.txt  cuckoo_join.cpp  cuckoo_join.hpp  join.cpp  join.hpp  join_omnisci.cpp  join_omnisci.hpp  join_omnisci_cuda.cpp  nested_join.cpp  nested_join.hpp  slab_join.cpp  slab_join.hpp  sort_join.cpp  sort_join.hpp  sort_merge_join.cpp  sort_merge_join.hpp
join/join_helpers/: CMakeLists.txt  join_helpers.hpp
probe/: CMakeLists.txt  cuckoo_probe.cpp  cuckoo_probe.hpp  slab_probe.cpp  slab_probe.hpp
radix/: CMakeLists.txt  radix.cpp  radix.hpp  radix_cuda.cpp  sort.cpp
reduce/: CMakeLists.txt  reduce.cpp  reduce.hpp
scan/: CMakeLists.txt  dplscan.cpp  dplscan_cuda.cpp  scan.cl  scan.cpp  scan.hpp
scripts/: benchmark_dplscan_large.sh  benchmark_dplscan_large_cuda.sh  benchmark_dplscan_small.sh  benchmark_dplscan_small_cuda.sh  benchmark_radix_large.sh  benchmark_radix_large_cuda.sh  benchmark_radix_small.sh  benchmark_radix_small_cuda.sh  benchmark_twopassscan.sh  release.py  report-sample.ipynb
sort/: CMakeLists.txt  radix.cpp  radix.hpp  radix_cuda.cpp  sort.cpp  sort.hpp  tbbsort.cpp  tbbsort.hpp
tests/: CMakeLists.txt  cuckoo_hashtable_tests.cpp  hash_table_tests.cpp  join_tests.cpp  scan_tests.cpp  slab_tests.cpp
tests/dwarf_tests/: CMakeLists.txt  dwarf_tests.cpp  dwarfs.hpp  utils.cpp  utils.hpp
